# lirs_cache

./: CMakeLists.txt  README.md  belady.cpp  cache.hpp  data.hpp  main.cpp
include/: belady.hpp  belady_naive.hpp  cache.hpp  data.hpp  lirs.hpp  lirs_naive.hpp
source/: CMakeLists.txt  belady.cpp  belady_naive.cpp  lirs.cpp
sourse/: belady.cpp  lirs.cpp  lirs_naive.cpp  main.cpp
tests/: CMakeLists.txt  test.cpp  tests.cpp
tests/comparison/: CMakeLists.txt  bar_chart.py  data_for_bar_chart.cpp  results.txt
